service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-test-app-service
spec:
  selector:
    app: flask-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
