flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-test-app-ingress

spec:
  rules:
  - host: flask-test-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-test-app-service
            port:
              number: 80
